<resources>
    <string name="app_name">MVVMNewsApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="news_headlines">News Headlines</string>
    <string name="saved_news">Saved News</string>
    <string name="title">Title</string>
    <string name="imageNews">Image News</string>
    <string name="description">Description</string>
    <string name="published_at">Published_At</string>
    <string name="author">Author</string>
    <string name="source">Source</string>
</resources>